fix break word & spacing of navbar

--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -9,6 +9,17 @@
 //   color: $font-color;
 // }
 
+@mixin word-wrap() {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
 
 
 h1, h2, h3, h4, h5, h6{
@@ -23,6 +34,10 @@ li {
 img{
   max-width: 100%;
   height: auto;
+}
+
+a{
+  @include word-wrap;
 }
 
 // Code
