--- a/styles/layouts/_header.scss
+++ b/styles/layouts/_header.scss
@@ -25,7 +25,7 @@
   // -webkit-box-shadow: 0 2px 4px 2px hsla(0, 0, 0, 0.04);
   // -moz-box-shadow: 0 2px 4px 2px hsla(0, 0, 0, 0.04);
   // box-shadow: 0 2px 4px 2px hsla(0, 0, 0, 0.04);
-  padding: 0.4rem 1rem !important;
+  padding: 0.4rem 0rem !important;
   &-is-scroll-down {
     box-shadow: 0 2px 8px rgba(10, 10, 10, 0.1);
   }
